<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_grey100_bottom_sheet_dialog"
        android:paddingHorizontal="@dimen/margin_screen_side">


        <ImageView
            android:id="@+id/img_top"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:src="@drawable/ic_bottom_sheet_dialog_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/scroll_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_top">

            <LinearLayout
                android:id="@+id/layout_filter_guide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title"
                    style="@style/kr_title_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_filter_galaxy_guide"
                    android:textColor="@color/grey_500" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_filter_guide_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/shape_white_round_background">

                    <ImageView
                        android:id="@+id/img_filter_guide_number_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="22.24dp"
                        android:layout_marginTop="21.5dp"
                        android:src="@drawable/ic_number_1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_filter_guide_1"
                        style="@style/kr_body_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/content_filter_galaxy_guide_1"
                        android:textColor="@color/blue_400"
                        app:layout_constraintBottom_toBottomOf="@id/img_filter_guide_number_1"
                        app:layout_constraintStart_toEndOf="@id/img_filter_guide_number_1"
                        app:layout_constraintTop_toTopOf="@id/img_filter_guide_number_1" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/view_img_filter_guide_1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_filter_guide_1">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:scaleType="centerCrop"
                            android:src="@drawable/bg_filter_guide_1" />
                    </androidx.cardview.widget.CardView>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_filter_guide_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_screen_side"
                    android:background="@drawable/shape_white_round_background">

                    <ImageView
                        android:id="@+id/img_filter_guide_number_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="22.24dp"
                        android:layout_marginTop="21.5dp"
                        android:src="@drawable/ic_number_2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_filter_guide_2"
                        style="@style/kr_body_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/content_filter_galaxy_guide_2"
                        android:textColor="@color/blue_400"
                        app:layout_constraintBottom_toBottomOf="@id/img_filter_guide_number_2"
                        app:layout_constraintStart_toEndOf="@id/img_filter_guide_number_2"
                        app:layout_constraintTop_toTopOf="@id/img_filter_guide_number_2" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/view_img_filter_guide_2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_filter_guide_2">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:scaleType="centerCrop"
                            android:src="@drawable/bg_filter_guide_2" />
                    </androidx.cardview.widget.CardView>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_filter_guide_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_screen_side"
                    android:background="@drawable/shape_white_round_background">

                    <ImageView
                        android:id="@+id/img_filter_guide_number_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="22.24dp"
                        android:layout_marginTop="21.5dp"
                        android:src="@drawable/ic_number_3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_filter_guide_3"
                        style="@style/kr_body_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/content_filter_galaxy_guide_3"
                        android:textColor="@color/blue_400"
                        app:layout_constraintBottom_toBottomOf="@id/img_filter_guide_number_3"
                        app:layout_constraintStart_toEndOf="@id/img_filter_guide_number_3"
                        app:layout_constraintTop_toTopOf="@id/img_filter_guide_number_3" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/view_img_filter_guide_3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_filter_guide_3">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:scaleType="centerCrop"
                            android:src="@drawable/bg_filter_guide_3" />
                    </androidx.cardview.widget.CardView>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_confirm"
                    style="@style/kr_body_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/shape_button_solid_primary_lg"
                    android:gravity="center"
                    android:paddingVertical="18dp"
                    android:text="@string/content_confirm"
                    android:textColor="@color/white" />

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>