<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.cmc.purithm.feature.filter.viewmodel.FilterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_100">

        <com.cmc.purithm.design.component.appbar.PurithmAppbar
            android:id="@+id/view_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/view_guide"
            layout="@layout/view_filter_guide"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="gone"
            app:clickEvent="@{() -> vm.setFilterFirstRun(false)}"
            app:guideVisibility="@{vm.state.isFirst}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/vp_picture" />

        <ImageView
            android:id="@+id/img_guide_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black_trans40"
            android:visibility="gone"
            app:guideVisibility="@{vm.state.isFirst}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/layout_filter_satisfaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_screen_side"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:delayClickEvent="@{() -> vm.clickFilterReview()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_appbar">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:src="@drawable/ic_review_start_3" />

            <TextView
                android:id="@+id/tv_filter_satisfaction"
                style="@style/kr_body_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@{String.format(@string/content_filter_satisfaction, vm.state.data.pureDegree)}"
                android:textColor="@color/grey_300"
                tools:text="필터 만족도 80%" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4.5dp"
                android:src="@drawable/ic_move_grey" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_filter_introduce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_screen_side"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:delayClickEvent="@{() -> vm.clickNavigateFilterIntroduction()}"
            app:layout_constraintStart_toEndOf="@id/layout_filter_satisfaction"
            app:layout_constraintTop_toBottomOf="@id/view_appbar">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3.5dp"
                android:src="@drawable/ic_artist_fill" />

            <TextView
                android:id="@+id/tv_filter_introduce"
                style="@style/kr_body_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/content_filter_introduce"
                android:textColor="@color/grey_300" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4.5dp"
                android:src="@drawable/ic_move_grey" />
        </LinearLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_picture"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_filter_satisfaction" />

        <TextView
            android:id="@+id/tv_page"
            style="@style/kr_body_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_badge_fill_blue"
            android:paddingHorizontal="8dp"
            android:paddingVertical="2dp"
            android:text="@{String.format(@string/content_filter_image_page, vm.state.selectedIndex, vm.state.data.pictures.size)}"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/vp_picture"
            tools:text="1/3" />

        <ImageView
            android:id="@+id/img_gradient"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_purple"
            android:visibility="@{vm.state.noText ? View.INVISIBLE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_no_filter"
            style="@style/kr_body_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_screen_side"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shape_button_trans_primary_s"
            android:drawableStart="@drawable/selector_filter"
            android:drawablePadding="6dp"
            android:gravity="center"
            android:paddingHorizontal="12dp"
            android:paddingVertical="10dp"
            android:text="@string/content_original"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/btn_no_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:touchEvent="@{() -> vm.clickFilterImgType(vm.state.filterImgType)}" />

        <CheckBox
            android:id="@+id/btn_no_text"
            style="@style/kr_body_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_screen_side"
            android:layout_marginBottom="40dp"
            android:background="@drawable/shape_button_trans_primary_s"
            android:button="@color/transparent"
            android:checked="@{vm.state.noText}"
            android:drawableStart="@drawable/selector_eye"
            android:drawablePadding="6dp"
            android:gravity="center"
            android:paddingHorizontal="12dp"
            android:paddingVertical="10dp"
            android:text="@string/content_text"
            android:textColor="@color/white"
            app:clickEvent="@{() -> vm.clickFilterTextVisibility()}"
            app:layout_constraintBottom_toTopOf="@id/btn_filter_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_filter_value"
            style="@style/kr_body_3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_bottom_button"
            android:layout_marginHorizontal="@dimen/margin_screen_side"
            android:layout_marginBottom="@dimen/margin_bottom_button_bottom"
            android:background="@drawable/shape_button_trans_primary_lg"
            android:gravity="center"
            android:paddingVertical="18dp"
            android:text="@string/content_filter_value"
            android:textColor="@color/white"
            android:visibility="invisible"
            app:delayClickEvent="@{() -> vm.clickNavigateFilterLoading()}"
            app:guideVisibility="@{vm.state.isFirst}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:noTextVisibility="@{vm.state.noText}" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>